# Star-Rating-Rebirth

./: .gitignore  README.md  algorithm.py  osu_file_parser.py  other_params.py  pyproject.toml  srcalc-script.py  test.py
.github/workflows/: build.yml
Calculator/: MACalculator.cs  Program.cs  note_seq.txt
Results/: srcalc_4k_R+L.csv  srcalc_4k_R+L_SR3.5+.csv  srcalc_4k_R+L_SR4.0+.csv  srcalc_7k_R+L.csv
